# libtlsrpt

./: Makefile.am  configure.ac
man/: Makefile.am
